--- a/index.html
+++ b/index.html
@@ -10,143 +10,145 @@
 
 
 <body>
-    <div class="header">
-        <a href="https://peopletech.com">
-            <img class="img" src="./cropped-people-tech-logo.png" alt="People Tech Group">
-        </a>
-    </div>
-    <div class="side1">
-        <div class="text">
-            <h1>About US</h1>
-            <p>People Tech Group is a leader in Enterprise Solutions,
-                Digital Transformation, Data Intelligence and Modern Operations.
-                We work with and have helped medium to large enterprise class customers
-                along with fortune 500 clients by utilizing our expertise in technology
-                integration development and implementation to accelerate our client’s
-                most important initiatives. Over the years, People Tech Group has
-                broadened its services by acquiring – the Ramp Group, our UX Design
-                Studio, CodeSmart, our Government Division, and Fyrsoft, our Modern Data
-                Center solution partner.</p><br>
-            <h1>Mission</h1>
-            <p>We are committed to providing our employees with a positive and
-                diverse work environment that encourages continued learning and personal
-                growth. This allows our employees to unlock their creativity and be
-                inspired to provide first class solutions to our customers.</p>
-
-            <p>Our customer focus is to understand high-value solutions and help
-                scale their business while keeping their vision forefront. Each project
-                that People Tech takes on is founded on the principle that user
-                experience, information technology, and business goals are interconnected
-                and essential to an exceptional end-result. We provide a broad portfolio of
-                business and technology solutions to help our clients improve their business
-                performance.</p><br>
-            <h1>Our Culture</h1>
-            <p>At People Tech, success is driven by the idea that our customers,
-                employees and community are our family. We believe in supporting ideas
-                and activities that drive passion with our employees and incorporate
-                those interests into organized activities. This has created a positive
-                workplace culture resulting in an increase in productivity and
-                creativity in the solutions we provide to our customers.</p>
+    <div class="container">
+        <div class="header">
+            <a href="https://peopletech.com">
+                <img class="img" src="./cropped-people-tech-logo.png" alt="People Tech Group">
+            </a>
         </div>
-    </div>
-    <div class="side2">
-        <form name="registration">
-            <h1>Employee Registration Form</h1><br>
-            <table>
-                <tr>
-                    <td><label>Emp ID: </label></td>
-                    <td>
-                        <input type="text" id="eid" >
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>First Name: </label></td>
-                    <td>
-                        <input type="text" id="fname" >
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>Last Name: </label></td>
-                    <td>
-                        <input type="text" id="lname" >
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>Email: </label></td>
-                    <td>
-                        <input type="text" id="email" >
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>Role: </label></td>
-                    <td>
-                        <input type="text" id="role" >
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>Gender: </label></td>    
-                    <td>    
-                        <input type="radio" name="gender" value="Male">Male    
-                        <input type="radio" name="gender" value="Female">Female    
-                    </td>  
-                </tr>
-                <tr>
-                    <td><label>Marital Status: </label></td>
-                    <td>
-                        <select id="status">
-                            <option selected="" value="Default">Please select</option>
-                            <option value="Single">Single</option>
-                            <option value="Married">Married</option>
-                            <option value="Divorced">Divorced</option>
-                            <option value="Widowed">Widowed</option>
-                            <option value="Prefer not to say">Prefer not to say</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>Employe Type: </label></td>    
-                    <td>    
-                        <input type="checkbox" name="empstatus" value="Full Time">Full Time    
-                        <input type="checkbox" name="empstatus" value="Intern">Intern    
-                    </td>  
-                </tr>
+        <div class="side1">
+            <div class="text">
+                <h1>About US</h1>
+                <p>People Tech Group is a leader in Enterprise Solutions,
+                    Digital Transformation, Data Intelligence and Modern Operations.
+                    We work with and have helped medium to large enterprise class customers
+                    along with fortune 500 clients by utilizing our expertise in technology
+                    integration development and implementation to accelerate our client’s
+                    most important initiatives. Over the years, People Tech Group has
+                    broadened its services by acquiring – the Ramp Group, our UX Design
+                    Studio, CodeSmart, our Government Division, and Fyrsoft, our Modern Data
+                    Center solution partner.</p><br>
+                <h1>Mission</h1>
+                <p>We are committed to providing our employees with a positive and
+                    diverse work environment that encourages continued learning and personal
+                    growth. This allows our employees to unlock their creativity and be
+                    inspired to provide first class solutions to our customers.</p>
 
-                <tr>
-                    <td>
-                        <input class="button" type="button" name="submit" value="Submit" onclick="return validate(detail)">
-                        <input class="reset" type="reset" name="reset" value="Reset">
-                    </td>
-                </tr>
-            </table>
+                <p>Our customer focus is to understand high-value solutions and help
+                    scale their business while keeping their vision forefront. Each project
+                    that People Tech takes on is founded on the principle that user
+                    experience, information technology, and business goals are interconnected
+                    and essential to an exceptional end-result. We provide a broad portfolio of
+                    business and technology solutions to help our clients improve their business
+                    performance.</p><br>
+                <h1>Our Culture</h1>
+                <p>At People Tech, success is driven by the idea that our customers,
+                    employees and community are our family. We believe in supporting ideas
+                    and activities that drive passion with our employees and incorporate
+                    those interests into organized activities. This has created a positive
+                    workplace culture resulting in an increase in productivity and
+                    creativity in the solutions we provide to our customers.</p>
+            </div>
+        </div>
+        <div class="side2">
+            <form name="registration">
+                <h1>Employee Registration Form</h1><br>
+                <table>
+                    <tr>
+                        <td><label>Emp ID: </label></td>
+                        <td>
+                            <input type="text" id="eid">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>First Name: </label></td>
+                        <td>
+                            <input type="text" id="fname">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Last Name: </label></td>
+                        <td>
+                            <input type="text" id="lname">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Email: </label></td>
+                        <td>
+                            <input type="text" id="email">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Role: </label></td>
+                        <td>
+                            <input type="text" id="role">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Gender: </label></td>
+                        <td>
+                            <input type="radio" name="gender" value="Male">Male
+                            <input type="radio" name="gender" value="Female">Female
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Marital Status: </label></td>
+                        <td>
+                            <select id="status">
+                                <option selected="" value="Default">Please select</option>
+                                <option value="Single">Single</option>
+                                <option value="Married">Married</option>
+                                <option value="Divorced">Divorced</option>
+                                <option value="Widowed">Widowed</option>
+                                <option value="Prefer not to say">Prefer not to say</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Employe Type: </label></td>
+                        <td>
+                            <input type="checkbox" name="empstatus" value="Full Time">Full Time
+                            <input type="checkbox" name="empstatus" value="Intern">Intern
+                        </td>
+                    </tr>
 
-            git 
-            <script>
-                var id = document.querySelector("#eid");
-                var fname = document.querySelector("#fname");
-                var lname = document.querySelector("#lname");
-                var email = document.querySelector("#email");
-                var role = document.querySelector("#role");
-                var gender = document.registration.gender;
-                var status = document.querySelector("#status");
-                var empstatus = document.registration.empstatus;
+                    <tr>
+                        <td>
+                            <input class="button" type="button" name="submit" value="Submit"
+                                onclick="return validate(detail)">
+                        </td>
+                    </tr>
+                </table>
 
-                function detail() {
-                    var data = {
-                        "EMP ID" : id.value,
-                        "First Name" : fname.value,
-                        "Last Name" : lname.value,
-                        "Email" : email.value,
-                        "Role" : role.value,
-                        "Gender" : gender.value,
-                        "Employement Type" : empstatus.value
+
+                <script>
+                    var id = document.querySelector("#eid");
+                    var fname = document.querySelector("#fname");
+                    var lname = document.querySelector("#lname");
+                    var email = document.querySelector("#email");
+                    var role = document.querySelector("#role");
+                    var gender = document.registration.gender;
+                    var status = document.querySelector("#status");
+                    var empstatus = document.registration.empstatus;
+
+                    function detail() {
+                        var data = {
+                            "EMP ID": id.value,
+                            "First Name": fname.value,
+                            "Last Name": lname.value,
+                            "Email": email.value,
+                            "Role": role.value,
+                            "Gender": gender.value,
+                            "Employement Type": empstatus.value
+
+                        }
+
+                        console.log(data);
 
                     }
-                    
-                    console.log(data);
-
-                }
-            </script>
-        </form>
+                </script>
+            </form>
+        </div>
     </div>
 
 </body>
