--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Download image using API</title>
-    <link rel="stylesheet" href="csss.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,26 +19,18 @@
         </div>
 
         <div class='buttons'>
-            <button id="btn-dog" onclick="fetchDogImage()">Random Image!</button>
-            <button id="btn-dog" onclick="download()" >Click to download</button>
+            <button id="btn" onclick="fetchImage()">Random Image!</button>
+            <button id="btn" onclick="download()" >Click to download</button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script>
         const dImage = document.getElementById('d-img');
-        const dButton = document.getElementById('btn-dog');
+        const dButton = document.getElementById('btn');
 
-        dButton.addEventListener('click', fetchDogImage);
+        dButton.addEventListener('click', fetchImage);
 
-        function fetchCatImage() {
-            fetch('https://aws.random.cat/meow')
-                .then(response => response.json())
-                .then(data => {
-                    catImage.innerHTML = `<img src="${data.file}"/>`;
-                })
-        }
-
-        function fetchDogImage() {
+        function fetchImage() {
             fetch('https://dog.ceo/api/breeds/image/random')
                 .then(response => response.json())
                 .then(data => {
@@ -62,10 +54,4 @@
                 });
         }
     </script>
-
-    <script>
-        
-    </script>
-
-
 </body>
