--- a/api.html
+++ b/api.html
@@ -2,12 +2,12 @@
 <head>
     <script src="api.js"></script>
     <link rel="stylesheet" href="api.css" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <title>Api Call</title>
 </head>
 
 <body>
-    <button onClick="history.go(0);">Tap here</button>
+    <button onClick="history.go(0);">Click here</button>
     <div class="container">
         <div class="details">
             <table>
